[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/music/destiny-day-by-kevin-macleod-from-filmmusic-io.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/menu/options/confirm_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/options/back_btn.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/pixel_operator/PixelOperator.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="OptionsMenu" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="."]
margin_left = 16.0
margin_top = 17.0
margin_right = 88.0
margin_bottom = 52.0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = -180.0
margin_right = 54.5
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionOption" type="HSplitContainer" parent="Options"]
margin_right = 360.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionLbl" type="Label" parent="Options/ResolutionOption"]
margin_top = 3.0
margin_right = 127.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Windowed Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionBtn" type="OptionButton" parent="Options/ResolutionOption"]
margin_left = 139.0
margin_right = 360.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )

[node name="FullscreenOption" type="HSplitContainer" parent="Options"]
margin_top = 26.0
margin_right = 360.0
margin_bottom = 50.0

[node name="FullscreenLbl" type="Label" parent="Options/FullscreenOption"]
margin_top = 4.0
margin_right = 66.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="Options/FullscreenOption"]
margin_left = 78.0
margin_right = 360.0
margin_bottom = 24.0

[node name="ConfirmBtn" type="Button" parent="Options"]
margin_top = 54.0
margin_right = 360.0
margin_bottom = 80.0
icon = ExtResource( 3 )
flat = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="item_selected" from="Options/ResolutionOption/ResolutionBtn" to="." method="_on_ResolutionBtn_item_selected"]
[connection signal="toggled" from="Options/FullscreenOption/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="pressed" from="Options/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
